# openfusion_ros

./: .gitignore  README.md  package.xml  setup.py
docs/experiment_1/: comments.md
docs/experiment_2/: comments.md
multimodal_query_msgs/: CMakeLists.txt
multimodal_query_msgs/msg/: SemanticPromptArray.msg
openfusion_ros/: package.xml  setup.cfg  setup.py
openfusion_ros/config/: openfusion_ros.yaml  openfusion_ros.yml
openfusion_ros/launch/: openfusion_ros.launch.py
openfusion_ros/openfusion_ros/: camera.py  datasets.py  io.py  openfusion_ros.py  openfusion_ros_node.py  robot copy.py  robot.py  slam.py  state.py
openfusion_ros/openfusion_ros/configs/: build.py
openfusion_ros/openfusion_ros/ros2_wrapper/: camera.py  load_model_node.py  openfusion_ros copy.py  openfusion_ros.py  openfusion_ros_node.py  robot.py  semantic_manager.py  utils.py  working.py
openfusion_ros/openfusion_ros/test/: scannet_collector_node.py  test_db_scan.py  test_open_fusion.py  test_publish_dataset.py  test_rot_matrix_2_quat.py  tf_pose_monitor.py
openfusion_ros/openfusion_ros/utils/: conversions.py  opencv.py  utils.py
openfusion_ros/openfusion_ros/zoo/: base_model.py
openfusion_ros/openfusion_ros/zoo/xdecoder_seem/: model.py
openfusion_ros/openfusion_ros/zoo/xdecoder_seem/configs/seem/: samvitl_unicl_lang_v1.yaml  seem_focall_lang.yaml
openfusion_ros/openfusion_ros/zoo/xdecoder_seem/xdecoder/architectures/: seem_model.py
openfusion_ros/openfusion_ros/zoo/xdecoder_seem/xdecoder/language/: vlpencoder.py
openfusion_ros/openfusion_ros/zoo/xdecoder_seem/xdecoder/language/LangEncoder/: transformer.py
openfusion_ros/rviz/: rviz.rviz
openfusion_tf_bridge/: CMakeLists.txt  package.xml
openfusion_tf_bridge/include/openfusion_tf_bridge/: openfusion_tf_bridge_node.hpp
openfusion_tf_bridge/src/: openfusion_tf_bridge_node.cpp
openfusion_tf_bridge/src/openfusion_tf_bridge/: openfusion_tf_bridge.cpp
vlm_base/vlm_base/: vlm_base.py
